# claude-stats

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  devenv.nix
.github/workflows/: ci.yml  release-please.yml
src/: main.rs
src/data/: mod.rs  usage.rs
src/ui/: claude_stats.rs  mod.rs
