[package]
name = "claude-stats"
version = "0.1.0"
edition = "2021"
description = "A TUI dashboard for Claude Code usage limits"
license = "CC-BY-NC-SA-4.0"
authors = ["i-am-logger"]
repository = "https://github.com/i-am-logger/claude-stats"
keywords = ["tui", "claude", "terminal", "statistics"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt", "macros"] }
dirs = "5.0"
chrono = "0.4"
anyhow = "1.0"
color-eyre = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
